[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/P-Miranda/python-packaging
author = P Miranda
author_email = "P Miranda" <pmiranda@email.com>
description = This package does nothing for now.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main
