[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/P-Miranda/python-packaging
author = P Miranda
author_email = "P Miranda" <pmiranda@email.com>
description = This package does nothing for now.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

#
# Tool Configuration
#

[mypy]
python_version = 3.9
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = test
addopts = --strict-markers
xfail_strict = True

[coverage:run]
source = imppkg
Branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/imppkg/
    */site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py39,py310

[testenv]
commands = pytest {posargs}
deps = 
    pytest
    pytest-cov
    pytest-randomly

[testenv:typecheck]
commands = mypy --ignore-missing-imports {posargs:src test}
deps =
    pytest
    mypy
    types-termcolor

[testenv:format]
commands = black {posargs:--check --diff src test}
skip_install = True
deps =
    black

[testenv:lint]
commands = flake8 {posargs:src test}
skip_install = True
deps =
    flake8
    flake8-bugbear
